Refactor ItemBuilder usage and update PriorityThreadedQueue implementation